--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,17 @@
-name: Deploy Debian Repo
+name: Deploy Debian Repo and Sync to kttdebianrepo.work.gd
 
 on:
   push:
     branches: [ main ]
 
 env:
-  REPO_DIR: .
+  REPO_DIR: ./debian-repo
   PUBLISH_BRANCH: gh-pages
   COMPONENT: main
+  REMOTE_USER: your_server_user
+  REMOTE_HOST: kttdebianrepo.work.gd
+  REMOTE_REPO_PATH: /var/www/debian-repo
+  REMOTE_NGINX_SERVICE: nginx
 
 jobs:
   deploy:
@@ -17,16 +21,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Debian repository with reprepro
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y reprepro nginx
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y reprepro rsync ssh
 
+      - name: Generate Debian repo
+        run: |
           mkdir -p "$REPO_DIR/conf"
-          echo "Codename: sid" > "$REPO_DIR/conf/distributions"
-          echo "Suite: unstable" >> "$REPO_DIR/conf/distributions"
-          echo "Components: ${COMPONENT}" >> "$REPO_DIR/conf/distributions"
-          echo "Architectures: amd64 all" >> "$REPO_DIR/conf/distributions"
+          cat > "$REPO_DIR/conf/distributions" <<EOF
+Codename: sid
+Suite: unstable
+Components: ${COMPONENT}
+Architectures: amd64 all
+EOF
 
           mkdir -p "$REPO_DIR/pool/${COMPONENT}"
           mkdir -p "$REPO_DIR/dists"
@@ -35,19 +41,19 @@ jobs:
             reprepro -b "$REPO_DIR" -S utils -P optional -C $COMPONENT includedeb sid "$deb" || true
           done
 
-      - name: Start nginx to serve repo on port 8080
-        run: |
-          sudo mkdir -p /var/www/html
-          sudo cp -r $REPO_DIR/* /var/www/html/
-          sudo sed -i 's|listen 80 default_server|listen 8080 default_server|g' /etc/nginx/sites-available/default
-          sudo sed -i 's|root /var/www/html;|root /var/www/html;\n    autoindex on;|' /etc/nginx/sites-available/default
-          sudo nginx -t
-          sudo systemctl restart nginx
-          echo "Repo is now being served at http://$(curl -s ifconfig.me):8080"
-
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ${{ env.REPO_DIR }}
           publish_branch: ${{ env.PUBLISH_BRANCH }}
+
+      - name: Sync repo to your server
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.REMOTE_SSH_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          rsync -avz --delete $REPO_DIR/ $REMOTE_USER@$REMOTE_HOST:$REMOTE_REPO_PATH/
+          ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "sudo systemctl reload $REMOTE_NGINX_SERVICE"
