--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,24 +23,26 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y reprepro
 
-    - name: Prepare Debian repo
+    - name: Prepare Debian repo (v0.9.1 .deb support)
       run: |
         mkdir -p $REPO_DIR/conf $REPO_DIR/pool/$COMPONENT
+
         echo "Codename: $DIST" > $REPO_DIR/conf/distributions
         echo "Suite: unstable" >> $REPO_DIR/conf/distributions
         echo "Components: $COMPONENT" >> $REPO_DIR/conf/distributions
         echo "Architectures: amd64 all" >> $REPO_DIR/conf/distributions
 
-        # Include all .deb packages
-        find $REPO_DIR/pool -type f -name "*.deb" | while read deb; do
+        echo "==> Including .deb packages with tag v0.9.1"
+        find $REPO_DIR/pool -type f -name "*v0.9.1*.deb" | while read deb; do
           reprepro -b $REPO_DIR -S utils -P optional -C $COMPONENT includedeb $DIST "$deb" || true
         done
 
     - name: Set up SSH agent
-      uses: webfactory/ssh-agent@v0.8.1
+      uses: webfactory/ssh-agent@v0.9.1
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Rsync repository to kttdebianrepo.work.gd
       run: |
+        echo "==> Uploading repo to ${{ secrets.DEPLOY_HOST }}:$DEPLOY_PATH"
         rsync -avz --delete $REPO_DIR/ ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:$DEPLOY_PATH/
